[metadata]
name = PathFinder
author = Jan Wimmer
author_email = wimmer190074@sr.htlweiz.at
description = PathFinder finds the path.
version = 1.0.0
url = https://github.com

[options]
python_requires >= 3.8
packages = Pathfinder
zip_safe = False
install_requires =
	sqlalchemy
    networkx
	matplotlib

[tool:pytest]
testpaths = tests
log_level = info